crates/ty_python_semantic/resources/mdtest/snapshots/Invalid_argument_typ…_-_invalid_argument_typ…_-_Many_parameters_acro…_(f302a13e01b9fd1).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Invalid argument type diagnostics - invalid_argument_type.md - Many parameters across multiple lines
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(
2 |     x: int,
3 |     y: int,
4 |     z: int,
5 | ) -> int:
6 |     return x * y * z
7 | 
8 | foo(1, "hello", 3)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:8:8
  |
6 |     return x * y * z
7 |
8 | foo(1, "hello", 3)  # error: [invalid-argument-type]
  |        ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(
  |     ^^^
2 |     x: int,
3 |     y: int,
  |     ------ Parameter declared here
4 |     z: int,
5 | ) -> int:
  |
info: rule `invalid-argument-type` is enabled by default

```
