crates/ty_python_semantic/resources/mdtest/snapshots/Invalid_argument_typ…_-_invalid_argument_typ…_-_Test_calling_a_funct…_(6831f301034bdc31).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Invalid argument type diagnostics - invalid_argument_type.md - Test calling a function whose type is vendored from `typeshed`
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | import json
2 | 
3 | json.loads(5)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `loads` is incorrect
 --> src/mdtest_snippet.py:3:12
  |
1 | import json
2 |
3 | json.loads(5)  # error: [invalid-argument-type]
  |            ^ Expected `str | bytes | bytearray`, found `Literal[5]`
  |
info: Function defined here
  --> stdlib/json/__init__.pyi:39:5
   |
37 |     **kwds: Any,
38 | ) -> None: ...
39 | def loads(
   |     ^^^^^
40 |     s: str | bytes | bytearray,
   |     -------------------------- Parameter declared here
41 |     *,
42 |     cls: type[JSONDecoder] | None = None,
   |
info: rule `invalid-argument-type` is enabled by default

```
