crates/ty_python_semantic/resources/mdtest/snapshots/No_matching_overload…_-_no_matching_overload…_-_Calls_to_overloaded_…_(f89cf77905ff3b34).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: No matching overload diagnostics - no_matching_overload.md - Calls to overloaded functions
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/no_matching_overload.md
---

# Python source files

## mdtest_snippet.py

```
1 | type("Foo", ())  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of class `type` matches arguments
 --> src/mdtest_snippet.py:1:1
  |
1 | type("Foo", ())  # error: [no-matching-overload]
  | ^^^^^^^^^^^^^^^
  |
info: rule `no-matching-overload` is enabled by default

```
